rename package name to pulsar-git-plus

--- a/styles/git-plus.less
+++ b/styles/git-plus.less
@@ -5,7 +5,7 @@
 @import "ui-variables";
 @import "syntax-variables";
 
-.git-plus {
+.pulsar-git-plus {
 	.error {
 		color: @text-color-warning;
 	}
@@ -66,11 +66,11 @@ atom-text-editor.editor {
 	}
 }
 
-.git-plus-log {
+.pulsar-git-plus-log {
 	background-color: @base-background-color;
 	overflow-y      : auto;
 
-	#git-plus-commits {
+	#pulsar-git-plus-commits {
 		width: 100%;
 		color : @text-color;
 		cursor: pointer;
