--- a/styles/output-view-beta.less
+++ b/styles/output-view-beta.less
@@ -1,6 +1,6 @@
 @gutter-width: 20px;
 
-.git-plus.output #root {
+.pulsar-git-plus.output #root {
   height: 100%;
   margin: 0 5px;
   overflow-y: scroll;
